[tool.poetry]
name = "fw-led"
version = "0.1.0"
description = ""
authors = ["Tom Faulkner <faulkner@pm.me>"]
readme = "README.md"
packages = [{include = "fw_led", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
inputmodule = {path = "../inputmodule-rs/python", develop = true}
psutil = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
